# FIU

./: .gitattributes  .gitignore  README.md  checkpoint.json  dummy  findings.md  main.py  progress.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  task_plan.md
.claude/: settings.local.json
ci/: build-rust.yml
config/: config.ini.example  production.ini  test-concurrent-bench.ini  test-e2e-phase21.ini  test-e2e-rust.ini  test-live.ini  test-order-live.ini  test-order-replay.ini  test-tickfile-live.ini  test-watermark.ini  test.ini
deploy/: fiu-minute-bar.service  restart.sh  setup.sh  start.sh  stop.sh
order_accel/: .gitignore  Cargo.toml
order_accel/src/: lib.rs
test/: e2e_verify.py
tests/: e2e_tickfile_restart_recovery.py  test_aggregator.py  test_checkpoint.py  test_clock.py  test_config.py  test_csv_parser.py  test_e2e_phase21_benchmark.py  test_e2e_tickfile_completeness.py  test_engine_late.py  test_file_tailer.py  test_flusher.py  test_integration.py  test_json_formatter.py  test_models.py  test_order.py  test_order_accel.py  test_order_accel_performance.py  test_order_batch_golden.py  test_order_drain.py  test_order_late_batch_write.py  test_phase21_parity_parallel.py  test_phase21_rss_profile.py  test_phase21_warmup.py  test_replay.py  test_rust_panic_isolation.py  test_schema_hash_parity.py  test_sigterm_handler.py  test_snapshot_drain.py  test_snapshot_ohlcv_golden.py  test_tickfile.py  test_tickfile_bg_writer.py  test_tickfile_commit_marker.py  test_tickfile_rust_golden.py  test_tickfile_stale_fix.py  test_tickfile_sync.py  test_watermark_engine.py  test_writer.py  (+1 more)
(+58 files in other folders)
