[build-system]
requires = ["setuptools>=68.0", "wheel", "setuptools-rust"]
build-backend = "setuptools.build_meta:__legacy__"

[project]
name = "fiu-minute-bar"
version = "1.0.0"
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "unit: fast pure-function tests",
    "integration: multi-component tests",
    "e2e: end-to-end engine/replay tests",
    "slow: tests that take >2s or need subprocess",
    "requires_pandas: needs pandas (dev dep; auto-skipped if absent)",
    "requires_fcntl: needs POSIX fcntl.flock (skipped on Windows)",
]

[project.scripts]
data-simulator = "data_simulator.__main__:main"
